@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-11T08:13:32Z",
-  "count_outdated" : 155,
-  "uniques_outdated" : 130,
+  "timestamp" : "2023-08-11T16:12:50Z",
+  "count_outdated" : 158,
+  "uniques_outdated" : 132,
   "count" : 169,
   "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 1,
