@@ -1,12 +1,7 @@
 {
-  "count": 13,
-  "uniques": 4,
+  "count": 11,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 1,
